[package]
name = "ladder"
version = "0.1.0"
edition = "2021"
authors = ["Magicskys <lonenysky@gmail.com>"]
description = "This is a multilingual word learning software."
repository = "https://github.com/Magicskys/ladder"
license-file = "LICENSE"
readme = "README.md"
keywords = ["english", "language-learning"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
egui-notify = "0.5"